tests/snapshots/fixtures_snapshot__fixtures__raw_data__pandas__0x40controlbyte_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "long_string_field1",
    "long_string_field2",
    "long_string_field3"
  ],
  "row_count": 1,
  "rows": [
    [
      {
        "kind": "string",
        "value": "00000000000000000000000000000000000000000000000000"
      },
      {
        "kind": "string",
        "value": "11111111111111111111111111111111111111111111111111"
      },
      {
        "kind": "string",
        "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
      }
    ]
  ]
}
