tests/snapshots/fixtures_snapshot__fixtures__raw_data__pandas__airline_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "YEAR",
    "Y",
    "W",
    "R",
    "L",
    "K"
  ],
  "row_count": 32,
  "rows": [
    [
      {
        "kind": "number",
        "value": 1948.0
      },
      {
        "kind": "number",
        "value": 1.2139999866485596
      },
      {
        "kind": "number",
        "value": 0.24300000071525574
      },
      {
        "kind": "number",
        "value": 0.1454000025987625
      },
      {
        "kind": "number",
        "value": 1.4149999618530273
      },
      {
        "kind": "number",
        "value": 0.6119999885559082
      }
    ],
    [
      {
        "kind": "number",
        "value": 1949.0
      },
      {
        "kind": "number",
        "value": 1.3539999723434448
      },
      {
        "kind": "number",
        "value": 0.25999999046325684
      },
      {
        "kind": "number",
        "value": 0.21809999644756317
      },
      {
        "kind": "number",
        "value": 1.3839999437332153
      },
      {
        "kind": "number",
        "value": 0.5590000152587891
      }
    ],
    [
      {
        "kind": "number",
        "value": 1950.0
      },
      {
        "kind": "number",
        "value": 1.569000005722046
      },
      {
        "kind": "number",
        "value": 0.27799999713897705
      },
      {
        "kind": "number",
        "value": 0.3156999945640564
      },
      {
        "kind": "number",
        "value": 1.3880000114440918
      },
      {
        "kind": "number",
        "value": 0.5730000138282776
      }
    ],
    [
      {
        "kind": "number",
        "value": 1951.0
      },
      {
        "kind": "number",
        "value": 1.9479999542236328
      },
      {
        "kind": "number",
        "value": 0.296999990940094
      },
      {
        "kind": "number",
        "value": 0.39399999380111694
      },
      {
        "kind": "number",
        "value": 1.5499999523162842
      },
      {
        "kind": "number",
        "value": 0.5640000104904175
      }
    ],
    [
      {
        "kind": "number",
        "value": 1952.0
      },
      {
        "kind": "number",
        "value": 2.265000104904175
      },
      {
        "kind": "number",
        "value": 0.3100000023841858
      },
      {
        "kind": "number",
        "value": 0.35589998960494995
      },
      {
        "kind": "number",
        "value": 1.8020000457763672
      },
      {
        "kind": "number",
        "value": 0.5740000009536743
      }
    ],
    [
      {
        "kind": "number",
        "value": 1953.0
      },
      {
        "kind": "number",
        "value": 2.7309999465942383
      },
      {
        "kind": "number",
        "value": 0.32199999690055847
      },
      {
        "kind": "number",
        "value": 0.35929998755455017
      },
      {
        "kind": "number",
        "value": 1.9259999990463257
      },
      {
        "kind": "number",
        "value": 0.7110000252723694
      }
    ],
    [
      {
        "kind": "number",
        "value": 1954.0
      },
      {
        "kind": "number",
        "value": 3.0250000953674316
      },
      {
        "kind": "number",
        "value": 0.33500000834465027
      },
      {
        "kind": "number",
        "value": 0.4025000035762787
      },
      {
        "kind": "number",
        "value": 1.9639999866485596
      },
      {
        "kind": "number",
        "value": 0.7760000228881836
      }
    ],
    [
      {
        "kind": "number",
        "value": 1955.0
      },
      {
        "kind": "number",
        "value": 3.562000036239624
      },
      {
        "kind": "number",
        "value": 0.3499999940395355
      },
      {
        "kind": "number",
        "value": 0.3961000144481659
      },
      {
        "kind": "number",
        "value": 2.115999937057495
      },
      {
        "kind": "number",
        "value": 0.8270000219345093
      }
    ],
    [
      {
        "kind": "number",
        "value": 1956.0
      },
      {
        "kind": "number",
        "value": 3.9790000915527344
      },
      {
        "kind": "number",
        "value": 0.3610000014305115
      },
      {
        "kind": "number",
        "value": 0.3822000026702881
      },
      {
        "kind": "number",
        "value": 2.434999942779541
      },
      {
        "kind": "number",
        "value": 0.800000011920929
      }
    ],
    [
      {
        "kind": "number",
        "value": 1957.0
      },
      {
        "kind": "number",
        "value": 4.420000076293945
      },
      {
        "kind": "number",
        "value": 0.3790000081062317
      },
      {
        "kind": "number",
        "value": 0.304500013589859
      },
      {
        "kind": "number",
        "value": 2.7070000171661377
      },
      {
        "kind": "number",
        "value": 0.9210000038146973
      }
    ],
    [
      {
        "kind": "number",
        "value": 1958.0
      },
      {
        "kind": "number",
        "value": 4.563000202178955
      },
      {
        "kind": "number",
        "value": 0.39100000262260437
      },
      {
        "kind": "number",
        "value": 0.32839998602867126
      },
      {
        "kind": "number",
        "value": 2.7060000896453857
      },
      {
        "kind": "number",
        "value": 1.0670000314712524
      }
    ],
    [
      {
        "kind": "number",
        "value": 1959.0
      },
      {
        "kind": "number",
        "value": 5.385000228881836
      },
      {
        "kind": "number",
        "value": 0.4259999990463257
      },
      {
        "kind": "number",
        "value": 0.3856000006198883
      },
      {
        "kind": "number",
        "value": 2.8459999561309814
      },
      {
        "kind": "number",
        "value": 1.0829999446868896
      }
    ],
    [
      {
        "kind": "number",
        "value": 1960.0
      },
      {
        "kind": "number",
        "value": 5.553999900817871
      },
      {
        "kind": "number",
        "value": 0.4410000145435333
      },
      {
        "kind": "number",
        "value": 0.31929999589920044
      },
      {
        "kind": "number",
        "value": 3.0889999866485596
      },
      {
        "kind": "number",
        "value": 1.4809999465942383
      }
    ],
    [
      {
        "kind": "number",
        "value": 1961.0
      },
      {
        "kind": "number",
        "value": 5.465000152587891
      },
      {
        "kind": "number",
        "value": 0.46000000834465027
      },
      {
        "kind": "number",
        "value": 0.30790001153945923
      },
      {
        "kind": "number",
        "value": 3.121999979019165
      },
      {
        "kind": "number",
        "value": 1.7359999418258667
      }
    ],
    [
      {
        "kind": "number",
        "value": 1962.0
      },
      {
        "kind": "number",
        "value": 5.824999809265137
      },
      {
        "kind": "number",
        "value": 0.48500001430511475
      },
      {
        "kind": "number",
        "value": 0.3783000111579895
      },
      {
        "kind": "number",
        "value": 3.184000015258789
      },
      {
        "kind": "number",
        "value": 1.9259999990463257
      }
    ],
    [
      {
        "kind": "number",
        "value": 1963.0
      },
      {
        "kind": "number",
        "value": 6.875999927520752
      },
      {
        "kind": "number",
        "value": 0.5059999823570251
      },
      {
        "kind": "number",
        "value": 0.4180000126361847
      },
      {
        "kind": "number",
        "value": 3.263000011444092
      },
      {
        "kind": "number",
        "value": 2.0409998893737793
      }
    ],
    [
      {
        "kind": "number",
        "value": 1964.0
      },
      {
        "kind": "number",
        "value": 7.822999954223633
      },
      {
        "kind": "number",
        "value": 0.5379999876022339
      },
      {
        "kind": "number",
        "value": 0.5163000226020813
      },
      {
        "kind": "number",
        "value": 3.4119999408721924
      },
      {
        "kind": "number",
        "value": 1.996999979019165
      }
    ],
    [
      {
        "kind": "number",
        "value": 1965.0
      },
      {
        "kind": "number",
        "value": 9.119999885559082
      },
      {
        "kind": "number",
        "value": 0.5640000104904175
      },
      {
        "kind": "number",
        "value": 0.5878999829292297
      },
      {
        "kind": "number",
        "value": 3.622999906539917
      },
      {
        "kind": "number",
        "value": 2.256999969482422
      }
    ],
    [
      {
        "kind": "number",
        "value": 1966.0
      },
      {
        "kind": "number",
        "value": 10.51200008392334
      },
      {
        "kind": "number",
        "value": 0.5860000252723694
      },
      {
        "kind": "number",
        "value": 0.536899983882904
      },
      {
        "kind": "number",
        "value": 4.073999881744385
      },
      {
        "kind": "number",
        "value": 2.742000102996826
      }
    ],
    [
      {
        "kind": "number",
        "value": 1967.0
      },
      {
        "kind": "number",
        "value": 13.020000457763672
      },
      {
        "kind": "number",
        "value": 0.621999979019165
      },
      {
        "kind": "number",
        "value": 0.44429999589920044
      },
      {
        "kind": "number",
        "value": 4.710000038146973
      },
      {
        "kind": "number",
        "value": 3.563999891281128
      }
    ],
    [
      {
        "kind": "number",
        "value": 1968.0
      },
      {
        "kind": "number",
        "value": 15.26099967956543
      },
      {
        "kind": "number",
        "value": 0.6660000085830688
      },
      {
        "kind": "number",
        "value": 0.3052000105381012
      },
      {
        "kind": "number",
        "value": 5.2170000076293945
      },
      {
        "kind": "number",
        "value": 4.767000198364258
      }
    ],
    [
      {
        "kind": "number",
        "value": 1969.0
      },
      {
        "kind": "number",
        "value": 16.312999725341797
      },
      {
        "kind": "number",
        "value": 0.7310000061988831
      },
      {
        "kind": "number",
        "value": 0.23319999873638153
      },
      {
        "kind": "number",
        "value": 5.568999767303467
      },
      {
        "kind": "number",
        "value": 6.511000156402588
      }
    ],
    [
      {
        "kind": "number",
        "value": 1970.0
      },
      {
        "kind": "number",
        "value": 16.00200080871582
      },
      {
        "kind": "number",
        "value": 0.8309999704360962
      },
      {
        "kind": "number",
        "value": 0.1882999986410141
      },
      {
        "kind": "number",
        "value": 5.494999885559082
      },
      {
        "kind": "number",
        "value": 7.626999855041504
      }
    ],
    [
      {
        "kind": "number",
        "value": 1971.0
      },
      {
        "kind": "number",
        "value": 15.87600040435791
      },
      {
        "kind": "number",
        "value": 0.906000018119812
      },
      {
        "kind": "number",
        "value": 0.20229999721050262
      },
      {
        "kind": "number",
        "value": 5.334000110626221
      },
      {
        "kind": "number",
        "value": 8.67300033569336
      }
    ],
    [
      {
        "kind": "number",
        "value": 1972.0
      },
      {
        "kind": "number",
        "value": 16.66200065612793
      },
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "number",
        "value": 0.25060001015663147
      },
      {
        "kind": "number",
        "value": 5.34499979019165
      },
      {
        "kind": "number",
        "value": 8.331000328063965
      }
    ],
    [
      {
        "kind": "number",
        "value": 1973.0
      },
      {
        "kind": "number",
        "value": 17.013999938964844
      },
      {
        "kind": "number",
        "value": 1.055999994277954
      },
      {
        "kind": "number",
        "value": 0.2667999863624573
      },
      {
        "kind": "number",
        "value": 5.6620001792907715
      },
      {
        "kind": "number",
        "value": 8.557000160217285
      }
    ],
    [
      {
        "kind": "number",
        "value": 1974.0
      },
      {
        "kind": "number",
        "value": 19.30500030517578
      },
      {
        "kind": "number",
        "value": 1.13100004196167
      },
      {
        "kind": "number",
        "value": 0.266400009393692
      },
      {
        "kind": "number",
        "value": 5.729000091552734
      },
      {
        "kind": "number",
        "value": 9.508000373840332
      }
    ],
    [
      {
        "kind": "number",
        "value": 1975.0
      },
      {
        "kind": "number",
        "value": 18.72100067138672
      },
      {
        "kind": "number",
        "value": 1.246999979019165
      },
      {
        "kind": "number",
        "value": 0.23010000586509705
      },
      {
        "kind": "number",
        "value": 5.7220001220703125
      },
      {
        "kind": "number",
        "value": 9.062000274658203
      }
    ],
    [
      {
        "kind": "number",
        "value": 1976.0
      },
      {
        "kind": "number",
        "value": 19.25
      },
      {
        "kind": "number",
        "value": 1.375
      },
      {
        "kind": "number",
        "value": 0.3452000021934509
      },
      {
        "kind": "number",
        "value": 5.76200008392334
      },
      {
        "kind": "number",
        "value": 8.26200008392334
      }
    ],
    [
      {
        "kind": "number",
        "value": 1977.0
      },
      {
        "kind": "number",
        "value": 20.64699935913086
      },
      {
        "kind": "number",
        "value": 1.5440000295639038
      },
      {
        "kind": "number",
        "value": 0.45080000162124634
      },
      {
        "kind": "number",
        "value": 5.876999855041504
      },
      {
        "kind": "number",
        "value": 7.473999977111816
      }
    ],
    [
      {
        "kind": "number",
        "value": 1978.0
      },
      {
        "kind": "number",
        "value": 22.72599983215332
      },
      {
        "kind": "number",
        "value": 1.7029999494552612
      },
      {
        "kind": "number",
        "value": 0.5877000093460083
      },
      {
        "kind": "number",
        "value": 6.107999801635742
      },
      {
        "kind": "number",
        "value": 7.104000091552734
      }
    ],
    [
      {
        "kind": "number",
        "value": 1979.0
      },
      {
        "kind": "number",
        "value": 23.618999481201172
      },
      {
        "kind": "number",
        "value": 1.7790000438690186
      },
      {
        "kind": "number",
        "value": 0.534600019454956
      },
      {
        "kind": "number",
        "value": 6.8520002365112305
      },
      {
        "kind": "number",
        "value": 6.874000072479248
      }
    ]
  ]
}
