tests/snapshots/fixtures_snapshot__fixtures__raw_data__pandas__dates_null_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "datecol",
    "datetimecol"
  ],
  "row_count": 2,
  "rows": [
    [
      {
        "kind": "date",
        "value": 2936547.0
      },
      {
        "kind": "datetime",
        "value": 253717747199.99896
      }
    ],
    [
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "missing",
        "value": null
      }
    ]
  ]
}
