tests/snapshots/fixtures_snapshot__fixtures__raw_data__pandas__datetime_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "Date1",
    "Date2",
    "DateTime",
    "DateTimeHi",
    "Taiw"
  ],
  "row_count": 4,
  "rows": [
    [
      {
        "kind": "date",
        "value": -103098.0
      },
      {
        "kind": "date",
        "value": -103098.0
      },
      {
        "kind": "datetime",
        "value": -8907752836.0
      },
      {
        "kind": "datetime",
        "value": -8907752836.854774
      },
      {
        "kind": "date",
        "value": -17532.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 0.0
      },
      {
        "kind": "date",
        "value": 0.0
      },
      {
        "kind": "datetime",
        "value": 0.0
      },
      {
        "kind": "datetime",
        "value": 0.0
      },
      {
        "kind": "date",
        "value": 0.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 20513.0
      },
      {
        "kind": "date",
        "value": 20513.0
      },
      {
        "kind": "datetime",
        "value": 1772409599.0
      },
      {
        "kind": "datetime",
        "value": 1772409599.123456
      },
      {
        "kind": "date",
        "value": 20513.0
      }
    ],
    [
      {
        "kind": "date",
        "value": 110404.0
      },
      {
        "kind": "date",
        "value": 110404.0
      },
      {
        "kind": "datetime",
        "value": 9538991236.0
      },
      {
        "kind": "datetime",
        "value": 9538991236.854774
      },
      {
        "kind": "date",
        "value": 110404.0
      }
    ]
  ]
}
