tests/snapshots/fixtures_snapshot__fixtures__raw_data__pandas__zero_rows_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "char_field",
    "num_field"
  ],
  "row_count": 0,
  "rows": []
}
